--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-    <a href="./aboutme.html/index.html">About Me Page</a>             
-    <a href="./aboutme.html/wwr/site-plan-rafting.html">White Water Rafting Website</a>
-    <a href="./aboutme.html/wwr/site-plan-rafting.css">White Water Rafting Siteplan</a>
+    <a href="wdd130/aboutme/about.html">About Me Page</a>             
+    <a href="wdd130/wrr/site-plan-rafting.html">White Water Rafting Website</a>
+    <a href="wdd130/wrr/site-plan-rafting.css">White Water Rafting Siteplan</a>
     <a href="positioning.html">Positioning Activity</a>
     <a href="#">Personal Website</a>
     <a href="#">Personal Siteplan</a>
