--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 Home Page</title>
-    <link rel="stylesheet" href="wdd130/wrr/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
     <a href="wdd130/aboutme/about.html">About Me Page</a>             
-    <a href="wdd130/wrr/site-plan-rafting.html">White Water Rafting Website</a>
-    <a href="wdd130/wrr/site-plan-rafting.css">White Water Rafting Siteplan</a>
-    <a href="positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
-    <a href="#">Personal Siteplan</a>
+    <a href="wdd130/wrr/site-plan-rafting.html">White Water Rafting Website  </a>
+    <a href="wdd130/wrr/site-plan-rafting.css">  White Water Rafting Siteplan  </a>
+    <a href="positioning.html">  Positioning Activity  </a>
+    <a href="#">  Personal Website  </a>
+    <a href="#">  Personal Siteplan  </a>
     </nav>
     <p>Dry Oar site plan - WDD130</p>
 </body>
