--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -56,13 +56,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="/wdd130/image/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="/wdd130/image/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="/wdd130/image/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
