--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -6,65 +6,65 @@
         <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
     </head>
     <body>
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Dry Oar Logo">
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="/wdd130/image/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Dry Oar </h4>
+            <div class='button-box'>
+                <a class='book' href="contactus.html">Book Now</a>
+            </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="/wdd130/image/rivers.jpg" alt="river in forest">
+            <img class="icon" src="/wdd130/image/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="/wdd130/image/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="/wdd130/image/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="/wdd130/image/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="/wdd130/image/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>   
+        <img class="mountains" src="/wdd130/image/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a class='join' href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="/wdd130/image/facebook.png" alt="fb icon">
             </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav>
-        </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="/wdd130/image/hero.png" alt="People enjoying white water rafting">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a class='book' href="contactus.html">Book Now</a>
-                </div>
-        <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="/wdd130/image/rivers.jpg" alt="river in forest">
-                <img class="icon" src="/wdd130/image/river_icon.png" alt="river icon">
-                <h2>Rivers</h2>
-            </section>
-            <section class="camping-card">
-                <img class="card-img" src="/wdd130/image/camping.jpg" alt="tent in mountains">
-                <img class="icon" src="/wdd130/image/fire_icon.png" alt="fire icon">
-                <h2>Camping</h2>
-            </section>
-            <section class="rapids-card">
-                <img class="card-img" src="/wdd130/image/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="/wdd130/image/oars.png" alt="oars icon">
-                <h2>Rapids</h2>
-            </section>   
-            <img class="mountains" src="/wdd130/image/mountains.jpg" alt="Misty mountains">
-            <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-     to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-                <a class='join' href="rivers.html">Join Us</a>
-            </section>
-        </main>
-        <footer>
-            <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
-            <div class="social">
-                <a href="https://facebook.com">
-                    <img src="/wdd130/image/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com">
-                    <img src="/wdd130/image/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com">
-                    <img src="/wdd130/image/" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
+            <a href="https://twitter.com">
+                <img src="/wdd130/image/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="/wdd130/image/" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
     </body>
 </html>
