--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -27,6 +27,8 @@
             <div class='button-box'>
                 <a class='book' href="contactus.html">Book Now</a>
             </div>
+        </section>
+    </div>
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="/wdd130/image/rivers.jpg" alt="river in forest">
