change link to image

--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="/wdd130/image/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -31,21 +31,21 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
+            <img class="card-img" src="/wdd130/image/rivers.jpg" alt="river in forest">
+            <img class="icon" src="/wdd130/image/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
+            <img class="card-img" src="/wdd130/image/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="/wdd130/image/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
+            <img class="card-img" src="/wdd130/image/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="/wdd130/image/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>   
-        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="/wdd130/image/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -58,13 +58,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+                <img src="/wdd130/image/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+                <img src="/wdd130/image/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                <img src="/wdd130/image/" alt="instagram icon">
             </a>
         </div>
     </footer>
