--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -64,7 +64,7 @@
                 <img src="/wdd130/image/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="/wdd130/image/" alt="instagram icon">
+                <img src="/wdd130/image/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
