added css to site

--- a/wdd130/wrr/index.html
+++ b/wdd130/wrr/index.html
@@ -1,72 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    </head>
-    <body>
-    <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div id="content">
+      <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Dry Oar Logo">
+          <img
+            class="logo"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png"
+            alt="Dry Oar Logo"
+          />
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+          <a href="index.html">Home</a>
+          <a href="#">Page 2</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="contactus.html">Contact Us</a>
         </nav>
-    </header>
-    <div id="hero">
+      </header>
+      <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="People enjoying white water rafting">
+          <img
+            id="hero-img"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png"
+            alt="People enjoying white water rafting"
+          />
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
-            </div>
+          <h1 class="home-title">Have An Adventure</h1>
+          <h4>Make Memories with Dry Oar</h4>
+          <div class="button-box">
+            <a class="book" href="contactus.html">Book Now</a>
+          </div>
         </section>
-    </div>
-    <main class="home-grid">
+      </div>
+      <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
+          <img
+            class="card-img"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg"
+            alt="river in forest"
+          />
+          <img
+            class="icon"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png"
+            alt="river icon"
+          />
+          <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
+          <img
+            class="card-img"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg"
+            alt="tent in mountains"
+          />
+          <img
+            class="icon"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png"
+            alt="fire icon"
+          />
+          <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>   
-        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html">Join Us</a>
+          <img
+            class="card-img"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg"
+            alt="rafting boat"
+          />
+          <img
+            class="icon"
+            src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png"
+            alt="oars icon"
+          />
+          <h2>Rapids</h2>
         </section>
-    </main>
-    <footer>
+        <div id="background"></div>
+        <img
+          class="mountains"
+          src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg"
+          alt="Misty mountains"
+        />
+        <section class="msg">
+          <h2>More Than Just The Thrill</h2>
+          <p>
+            Enjoy the breathtaking scenery. From valleys, meadows, canyons, and
+            high peaks; it's way more than just the rapids. It's a great way to
+            get away from it all and relax amongst all the beauty of the great
+            outdoors.
+          </p>
+          <a class="join" href="rivers.html">Join Us</a>
+        </section>
+      </main>
+      <footer>
         <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
-            </a>
+          <a href="https://facebook.com" target="_blank">
+            <img
+              src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png"
+              alt="fb icon"
+            />
+          </a>
+          <a href="https://twitter.com" target="_blank">
+            <img
+              src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png"
+              alt="twitter icon"
+            />
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <img
+              src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png"
+              alt="instagram icon"
+            />
+          </a>
         </div>
-    </footer>
-    </body>
+      </footer>
+    </div>
+  </body>
 </html>
